# server/app/schemas/__init__.py
@@ -2,3 +2,5 @@ from .user import User, UserCreate, UserUpdate, UserInDBBase
 from .project import Project, ProjectCreate, ProjectUpdate
 from .chat import Chat, ChatCreate, ChatUpdate
 from .token import TokenPayload
+from .message import Message, MessageCreate, MessageUpdate
+from .user_message_request import UserMessageRequest
